<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SmsPermissionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SmsPermissionActivity">

    <ImageView
        android:id="@+id/LogoImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logo_content_desc"
        app:srcCompat="@drawable/inventory_app_logo" />

    <TextView
        android:id="@+id/SmsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/bodoni_moda_bold"
        android:text="@string/sms_notification"
        android:textAlignment="center"
        android:textSize="36sp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/SmsPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway"
        android:layout_marginTop="8dp"
        android:text="@string/sms_prompt"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/EnableSmsButton"
        style="@style/Widget.Material3.Button"
        android:backgroundTint="#4DBC39"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/raleway"
        android:text="@string/enable"
        app:cornerRadius="4dp" />

    <Button
        android:id="@+id/SkipButton"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/raleway"
        android:text="@string/skip"
        app:cornerRadius="4dp" />
</LinearLayout>