<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ItemEditFrameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/TopBarLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="#00FFFFFF"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/inventory_app_logo" />

        <TextView
            android:id="@+id/PageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bodoni_moda_bold"
            android:text="@string/edit_item"
            android:textAlignment="center"
            android:textSize="26sp" />

        <ImageView
            android:id="@+id/ItemImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/item_placeholder_image" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ItemNameTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_name"
            android:maxWidth="400dp"
            android:paddingHorizontal="10dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ItemNameEditText"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:fontFamily="@font/raleway"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ItemStockTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_stock"
            android:maxWidth="400dp"
            android:paddingHorizontal="10dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ItemStockEditText"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:fontFamily="@font/raleway"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ItemSkuTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_sku"
            android:maxWidth="400dp"
            android:paddingHorizontal="10dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ItemSkuEditText"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:fontFamily="@font/raleway"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/ItemSaveButton"
            style="@style/Widget.Material3.Button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:backgroundTint="#4DBC39"
            android:fontFamily="@font/raleway"
            android:text="@string/save_changes"
            app:cornerRadius="4dp" />

        <Button
            android:id="@+id/ItemDeleteButton"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/raleway"
            android:text="@string/delete_item"
            android:textColor="@android:color/holo_red_dark" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/BackButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_arrow_back" />


</FrameLayout>