<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LoginScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="afterDescendants"
    android:fillViewport="true"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ItemEditFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="24dp">

        <ImageView
            android:id="@+id/LogoImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logo_content_desc"
            android:onClick="goToInventory"
            app:srcCompat="@drawable/inventory_app_logo" />

        <TextView
            android:id="@+id/AppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/bodoni_moda_bold"
            android:text="Inventory App"
            android:textAlignment="center"
            android:textSize="48sp"
            tools:ignore="HardcodedText" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EmailTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:maxWidth="400dp"
            android:paddingHorizontal="10dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EmailText"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:fontFamily="@font/raleway"
                android:inputType="text|textWebEmailAddress"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/PasswordTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:maxWidth="400dp"
            android:paddingHorizontal="10dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/PasswordText"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:fontFamily="@font/raleway"
                android:inputType="text|textPassword"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/LoginButton"
            style="@style/Widget.Material3.Button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:backgroundTint="#48444E"
            android:fontFamily="@font/raleway"
            android:text="@string/login"
            app:cornerRadius="4dp" />

        <Button
            android:id="@+id/RegisterButton"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/raleway"
            android:text="@string/register"
            android:textColor="#6750A3" />

    </LinearLayout>
</ScrollView>